Alterei de mascote da android para mascote da apples(teste)

--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -22,7 +22,7 @@
     </nav>
     <main>
         <article>
-            <h1>História do Mascote do Android</h1>
+            <h1>História do Mascote da Apple</h1>
 
             <p>Provavelmente você sabe que o sistema operacional Android, mantido pelo Google é um dos mais utilizados
                 para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um
