--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -10,5 +10,7 @@
     <hr>
     <p>esse é o meu primeiro documento HTML!</p>
     <p>este é um momento unico! estou criando um site</p>
+    <p>estou muito feliz com isso!</p>
+    <p>estou aprendendo HTML e CSS</p>
 </body>
 </html>
