mais um paragrafo

--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -12,5 +12,6 @@
     <p>este é um momento unico! estou criando um site</p>
     <p>estou muito feliz com isso!</p>
     <p>estou aprendendo HTML e CSS</p>
+    <p>Aleatorio</p>
 </body>
 </html>
